# coral

./: CMakeLists.txt
src/: Array.cc  Array.hh  Check.hh~  GSL_Linear_Algebra.cc  GSL_Linear_Algebra.cc~  GSL_Linear_Algebra.hh  GSL_Linear_Algebra.hh~  Linear_Algebra.cc  Linear_Algebra.cc~  Linear_Algebra.hh  Linear_Algebra.hh~  Matrix_Operations.cc  Matrix_Operations.cc~  Matrix_Operations.hh  Matrix_Operations.hh~  Ordinates.cc  Ordinates.cc~  Ordinates.hh  Ordinates.hh~  Parser.cc  Parser.hh  Random_Number_Generator.cc~  Random_Number_Generator.hh~  Timer.cc~  Trilinos_Linear_Algebra.cc  Trilinos_Linear_Algebra.cc~
test/: array.cc  gsl_test.cc  gsl_test.cc~  matrix_solution.cc  matrix_solution.cc~
